[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exam_analyzer"
version = "0.0.6"
authors = [
  { name="xjdx", email="fearlessxjdx@qq.com" },
]
description = "Analysis and Summary Tool for College Entrance Exam Grade Report"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
  "PyPDF2",
  "pandas",
  "openpyxl",
]

[project.urls]
"Homepage" = "https://github.com/fearlessxjdx/ExamAnalyzer"
"Bug Tracker" = "https://github.com/fearlessxjdx/ExamAnalyzer/issues"
